--- a/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/fragment_inicio.xml
@@ -41,7 +41,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
+                android:queryHint="@string/txtBuscador"
                 android:layout_marginBottom="10dp"
+                android:iconifiedByDefault="false"
                 android:background="@drawable/custom_rectangle"
                 android:queryBackground="@drawable/custom_rectangle"
                 android:submitBackground="@drawable/custom_rectangle">
