--- a/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
@@ -92,4 +92,13 @@
         app:layout_constraintStart_toEndOf="@+id/btnC"
         app:layout_constraintTop_toBottomOf="@+id/btnB" />
 
+    <TextView
+        android:id="@+id/txtIdPregunta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/idPregunta"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtVida" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
