--- a/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
@@ -39,7 +39,10 @@
         android:id="@+id/txtPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:text="@string/descripcionPregunta"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/btnB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +55,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:text="@string/b"
+        android:background="@drawable/button_round"
         app:layout_constraintBottom_toTopOf="@+id/btnD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnA"
@@ -64,6 +68,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/button_round"
         android:text="@string/c"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnD"
@@ -78,6 +83,7 @@
         android:layout_marginEnd="5dp"
         android:text="@string/a"
         app:layout_constraintBottom_toTopOf="@+id/btnC"
+        android:background="@drawable/button_round"
         app:layout_constraintEnd_toStartOf="@+id/btnB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />
@@ -89,6 +95,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/button_round"
         android:text="@string/d"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,5 +111,16 @@
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVida" />
+
+    <TextView
+        android:id="@+id/txtPuntuacionJugador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/puntuacion"
+        app:layout_constraintBottom_toTopOf="@+id/imgAnimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtVida" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
