--- a/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_juego.xml
@@ -13,9 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="9dp"
         android:text="@string/vidas"
-        app:layout_constraintBottom_toTopOf="@+id/imgAnimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +31,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVida"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/txtPregunta"
@@ -41,12 +40,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/descripcionPregunta"
-        android:textSize="18sp"
+        android:textSize="23sp"
         app:layout_constraintBottom_toTopOf="@+id/btnB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgAnimal" />
+        app:layout_constraintTop_toBottomOf="@+id/imgAnimal"
+        tools:visibility="gone" />
 
     <Button
         android:id="@+id/btnB"
@@ -54,12 +55,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:text="@string/b"
         android:background="@drawable/button_round"
+        android:text="@string/b"
         app:layout_constraintBottom_toTopOf="@+id/btnD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnA"
-        app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
+        tools:visibility="gone" />
 
     <Button
         android:id="@+id/btnC"
@@ -73,7 +75,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnD"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnA" />
+        app:layout_constraintTop_toBottomOf="@+id/btnA"
+        tools:visibility="gone" />
 
     <Button
         android:id="@+id/btnA"
@@ -81,12 +84,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:background="@drawable/button_round"
         android:text="@string/a"
         app:layout_constraintBottom_toTopOf="@+id/btnC"
-        android:background="@drawable/button_round"
         app:layout_constraintEnd_toStartOf="@+id/btnB"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
+        tools:visibility="gone" />
 
     <Button
         android:id="@+id/btnD"
@@ -100,27 +104,43 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnC"
-        app:layout_constraintTop_toBottomOf="@+id/btnB" />
+        app:layout_constraintTop_toBottomOf="@+id/btnB"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/txtIdPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:lineSpacingExtra="12sp"
+        android:layout_marginStart="5dp"
         android:text="@string/idPregunta"
-        android:textSize="10sp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/imgAnimal"
+        app:layout_constraintEnd_toStartOf="@+id/txtVida"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtVida" />
+        app:layout_constraintTop_toBottomOf="@+id/txtVida"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/txtPuntuacionJugador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="3dp"
         android:text="@string/puntuacion"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/imgAnimal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtVida" />
+        app:layout_constraintStart_toEndOf="@+id/txtVida"
+        app:layout_constraintTop_toBottomOf="@+id/txtVida" />
+
+    <ProgressBar
+        android:id="@+id/cargaJuego"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgAnimal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
