--- a/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_main.xml
@@ -100,8 +100,8 @@
         android:textSize="18sp"
         android:textStyle="bold|italic"
 
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/txtCuenta"
-        tools:visibility="gone" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCuenta" />
 </androidx.constraintlayout.widget.ConstraintLayout>
