--- a/ElMundoAnimal/app/src/main/res/layout/activity_actividad_ayuda.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_actividad_ayuda.xml
@@ -7,91 +7,105 @@
     android:background="@color/azul"
     tools:context=".actividades.ActividadAyuda">
 
-    <androidx.cardview.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardCornerRadius="6dp"
-
-        app:layout_constraintVertical_bias="0.485">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txtQueEsjUEGO"
-                style="@style/texto"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/verdeClaro2"
-                android:text="@string/txtEstaAplicacion"
-                android:textAlignment="center" />
+                android:layout_height="match_parent"
+                app:cardCornerRadius="6dp"
 
-            <TextView
-                android:id="@+id/txtJuegoDes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="@string/txtDescripcion"
-                android:textSize="18sp" />
+                >
 
-            <TextView
-                android:id="@+id/txtsafeJuego"
-                style="@style/texto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/verdeClaro2"
-                android:text="@string/esSeguro"
-                android:textAlignment="center"  />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView20"
-                android:layout_width="match_parent"
-                android:layout_margin="5dp"
-                android:textSize="18sp"
-                android:layout_height="wrap_content"
-                android:text="@string/txtSafeForWork" />
+                    <TextView
+                        android:id="@+id/txtQueEsjUEGO"
+                        style="@style/texto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/verdeClaro2"
+                        android:text="@string/txtEstaAplicacion"
+                        android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/textView21"
-                style="@style/texto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/verdeClaro2"
-                android:text="@string/txtNoFuncion"
-                android:textAlignment="center"  />
+                    <TextView
+                        android:id="@+id/txtJuegoDes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="@string/txtDescripcion"
+                        android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView22"
-                android:layout_width="match_parent"
-                android:layout_margin="5dp"
-                android:textSize="18sp"
-                android:layout_height="wrap_content"
-                android:text="@string/bugs" />
+                    <TextView
+                        android:id="@+id/txtsafeJuego"
+                        style="@style/texto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/verdeClaro2"
+                        android:text="@string/esSeguro"
+                        android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/textView23"
-                style="@style/texto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/verdeClaro2"
-                android:text="@string/version"
-                android:textAlignment="center" />
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="@string/txtSafeForWork"
+                        android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView24"
-                android:layout_width="match_parent"
-                android:layout_margin="5dp"
-                android:textSize="18sp"
-                android:layout_height="wrap_content"
-                android:text="@string/txtVersion" />
+                    <TextView
+                        android:id="@+id/textView21"
+                        style="@style/texto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/verdeClaro2"
+                        android:text="@string/txtNoFuncion"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/textView22"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="@string/bugs"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/textView23"
+                        style="@style/texto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/verdeClaro2"
+                        android:text="@string/version"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/textView24"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="@string/txtVersion"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
