--- a/ElMundoAnimal/app/src/main/res/layout/activity_cambiar_contrasenia.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_cambiar_contrasenia.xml
@@ -7,42 +7,13 @@
     android:background="@color/azul"
     tools:context="com.nicolasfernandez.elmundoanimal.actividades.CambiarContrasenia">
 
-    <LinearLayout
-        android:id="@+id/linearCarga"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView3"
-            style="@style/texto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/cargando"
-            android:textAlignment="center"
-            android:textColor="@color/rojoOscuro" />
-
-        <ProgressBar
-            android:id="@+id/pgCarga3"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-    </LinearLayout>
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView12"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:visibility="visible"
         app:cardCornerRadius="6dp"
         app:layout_constraintBottom_toTopOf="@+id/btnCambiar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +89,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:visibility="visible"
         app:cardCornerRadius="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,10 +113,11 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:text="@string/btnCambiar"
         android:background="@drawable/button_round"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:onClick="Cambiar"
+        android:text="@string/btnCambiar"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
